# GlossPong

./: Entity.hs  GlossPong.cabal  LICENSE  Main.hs  README  World.hs
Entity/: Ball.hs  Paddle.hs
